k8s/overlays/local/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quick-fastapi-medium
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30080
